--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/prettier": "^2.0.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@types/react-table": "^7.0.18",
+    "@types/react-table": "7.0.18",
     "@types/testing-library__jest-dom": "^5.9.1",
     "@types/testing-library__react": "^10.0.1",
     "eslint-config-prettier": "^6.11.0",
