--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,3 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
 version: 2.1
 orbs:
   aws-s3: circleci/aws-s3@1.0.11
@@ -11,17 +7,16 @@ jobs:
       - image: circleci/node:12.9.1-browsers
 
     working_directory: ~/repo
+
     steps:
       - checkout
-      # Download and cache dependencies
+
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run:
-          name: Install dependencies
-          command: yarn install
+      - run: yarn install
 
       - save_cache:
           paths:
@@ -29,9 +24,9 @@ jobs:
             - ~/.npm
             - ~/.cache
           key: v1-dependencies-{{ checksum "package.json" }}
-      - run:
-          name: Yarn build
-          command: yarn build
+
+      - run: yarn build
+
       - aws-s3/sync:
           from: build
           to: "s3://widget-table/"
