--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,21 +11,21 @@ jobs:
     steps:
       - checkout
 
-      # - restore_cache:
-      #     keys:
-      #       - v1-dependencies-{{ checksum "package.json" }}
-      #       # fallback to using the latest cache if no exact match is found
-      #       - v1-dependencies-
-      # - run: yarn install
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+      - run: yarn install
 
-      # - save_cache:
-      #     paths:
-      #       - node_modules
-      #       - ~/.npm
-      #       - ~/.cache
-      #     key: v1-dependencies-{{ checksum "package.json" }}
+      - save_cache:
+          paths:
+            - node_modules
+            - ~/.npm
+            - ~/.cache
+          key: v1-dependencies-{{ checksum "package.json" }}
 
-      # - run: yarn build
+      - run: yarn build
 
       - aws-s3/sync:
           from: build
