--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,8 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/node:12.9.1-browsers
-
+      # - image: circleci/node:12.9.1-browsers
+      - image: 'cimg/python:3.6'
     working_directory: ~/repo
 
     steps:
