--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 version: 2.1
 orbs:
-  aws-s3: circleci/aws-s3@3.0.0
+  aws-s3: circleci/aws-s3@1.0.11
 jobs:
   build:
     docker:
-      # - image: circleci/node:12.9.1-browsers
-      - image: 'cimg/python:3.6'
+      - image: circleci/node:12.9.1-browsers
+
     working_directory: ~/repo
 
     steps:
