--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:12.9.1-browsers
-
+      - image: 'cimg/python:3.6'
     working_directory: ~/repo
 
     steps:
