--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,35 +5,19 @@ jobs:
   build:
     docker:
       - image: 'cimg/python:3.6'
-    working_directory: ~/repo
-
     steps:
       - checkout
-
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-      - run: yarn install
-
-      - save_cache:
-          paths:
-            - node_modules
-            - ~/.npm
-            - ~/.cache
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      - run: yarn build
-
+      - run: mkdir bucket && echo "lorem ipsum" > bucket/build_asset.txt
       - aws-s3/sync:
-          from: build
-          to: "s3://widget-table/"
           arguments: |
             --acl public-read \
             --cache-control "max-age=86400"
-          overwrite: true
-
+          from: bucket
+          to: 's3://widget-table'
+      - aws-s3/copy:
+          arguments: '--dryrun'
+          from: bucket/build_asset.txt
+          to: 's3://widget-table'
 workflows:
   s3-example:
     jobs:
