--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,11 @@ jobs:
             --acl public-read \
             --cache-control "max-age=86400"
           from: bucket
-          to: "s3://widget-table/"
+          to: 's3://widget-table/'
       - aws-s3/copy:
           arguments: '--dryrun'
           from: bucket/build_asset.txt
-          to: "s3://widget-table/"
+          to: 's3://widget-table/'
 workflows:
   s3-example:
     jobs:
