--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ orbs:
 jobs:
   build:
     docker:
+      - image: circleci/node:12.9.1-browsers
       - image: 'cimg/python:3.6'
     steps:
       - checkout
