--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - aws-s3/sync:
           arguments: |
             --acl public-read \
-            --cache-control "max-age=86400"
+            --cache-control "max-age=86400" \
           from: build
           to: 's3://widget-table/'
           overwrite: true # default is false
