--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
           from: build
           to: 's3://widget-table/'
           arguments: |
+            --delete \
             --acl public-read \
             --cache-control "max-age=86400" \
 
