--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - test
+            - public
 
   build_dev:
     executor: my-executor
