--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ executors:
       - image: 'cimg/python:3.6'
 
 
+
 jobs:
   build:
     executor: my-executor
@@ -17,12 +18,13 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - public
+            - _build
 
   build_dev:
     executor: my-executor
     steps:
-      - checkout
+      - attach_workspace:
+          at: .
       - aws-s3/sync:
           arguments: |
             --acl public-read \
@@ -33,7 +35,6 @@ jobs:
   build_prod:
     executor: my-executor
     steps:
-      - checkout
       - attach_workspace:
           at: .
       - aws-s3/sync:
