--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - attach_workspace:
           at: .
       - run: |
-          if [[ `cat ~/repo/bucket/build_asset.txt` == "lorem ipsum" ]]; then
+          if [[ `cat /home/circleci/repo/bucket/build_asset.txt` == "lorem ipsum" ]]; then
             echo "It worked!";
           else
             echo "Nope!"; exit 1
@@ -43,6 +43,12 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+      - run: |
+          if [[ `cat /home/circleci/repo/bucket/build_asset.txt` == "lorem ipsum" ]]; then
+            echo "It worked!";
+          else
+            echo "Nope!"; exit 1
+          fi
       - aws-s3/sync:
           arguments: |
             --acl public-read \
