--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - attach_workspace:
           at: .
       - run: |
-          if [[ `cat bucket/build_asset.txt` == "lorem ipsum" ]]; then
+          if [[ `cat ~/repo/bucket/build_asset.txt` == "lorem ipsum" ]]; then
             echo "It worked!";
           else
             echo "Nope!"; exit 1
@@ -44,7 +44,7 @@ jobs:
       - attach_workspace:
           at: .
       - run: |
-          if [[ `cat bucket/build_asset.txt` == "lorem ipsum" ]]; then
+          if [[ `cat ~/repo/bucket/build_asset.txt` == "lorem ipsum" ]]; then
             echo "It worked!";
           else
             echo "Nope!"; exit 1
