--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,12 +25,12 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - run: |
-          if [[ `cat ~/repo/bucket/build_asset.txt` == "lorem ipsum" ]]; then
-            echo "It worked!";
-          else
-            echo "Nope!"; exit 1
-          fi
+      # - run: |
+      #     if [[ `cat ~/repo/bucket/build_asset.txt` == "lorem ipsum" ]]; then
+      #       echo "It worked!";
+      #     else
+      #       echo "Nope!"; exit 1
+      #     fi
       - aws-s3/sync:
           arguments: |
             --acl public-read \
