--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ orbs:
 executors:
   my-executor:
     docker:
+      - image: circleci/node:12.9.1-browsers
       - image: 'cimg/python:3.6'
     working_directory: ~/repo
 
@@ -14,53 +15,54 @@ jobs:
     executor: my-executor
     steps:
       - checkout
-      - run: mkdir bucket && echo "lorem ipsum strava" > bucket/build_asset.txt
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+      - run: yarn install
+      - save_cache:
+          paths:
+            - node_modules
+            - ~/.npm
+            - ~/.cache
+          key: v1-dependencies-{{ checksum "package.json" }}
+      - run: yarn build
       - persist_to_workspace:
           root: .
           paths:
-            - bucket
+            - build
 
   build_dev:
     executor: my-executor
     steps:
       - attach_workspace:
           at: .
-      # - run: |
-      #     if [[ `cat ~/repo/bucket/build_asset.txt` == "lorem ipsum" ]]; then
-      #       echo "It worked!";
-      #     else
-      #       echo "Nope!"; exit 1
-      #     fi
       - aws-s3/sync:
           arguments: |
             --acl public-read \
             --cache-control "max-age=86400"
-          from: bucket
-          to: 's3://widget-table/prefix'
+          from: build
+          to: 's3://$S3_BUCKET_NAME-dev/prefix'
 
   build_prod:
     executor: my-executor
     steps:
       - attach_workspace:
           at: .
-      # - run: mkdir bucket && echo "lorem ipsum" > bucket/build_asset.txt
       - aws-s3/sync:
           arguments: |
             --acl public-read \
             --cache-control "max-age=86400"
-          from: bucket
-          to: 's3://widget-table/prefix'
-      - run: |
-          if [[ `cat bucket/build_asset.txt` == "lorem ipsum" ]]; then
-            echo "It worked!";
-          else
-            echo "Nope!"; exit 1
-          fi
+          from: build
+          to: 's3://$S3_BUCKET_NAME-prod/prefix'
 
 workflows:
   dev-deploy:
     jobs:
       - build_dev:
+          requires:
+            - build
           filters:
             branches:
               only: /develop/
