--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
             --acl public-read \
             --cache-control "max-age=86400"
           from: build
-          to: 's3://$S3_BUCKET_NAME-dev/prefix'
+          to: 's3://$S3_BUCKET_NAME-dev'
 
   build_prod:
     executor: my-executor
@@ -55,7 +55,7 @@ jobs:
             --acl public-read \
             --cache-control "max-age=86400"
           from: build
-          to: 's3://$S3_BUCKET_NAME-prod/prefix'
+          to: 's3://$S3_BUCKET_NAME-prod'
 
 workflows:
   dev-deploy:
