--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,12 +39,15 @@ jobs:
       - attach_workspace:
           at: ~/repo
       - run: yarn build
-      - aws-s3/sync:
-          arguments: |
-            --acl public-read \
-            --cache-control "max-age=86400"
-          from: build
-          to: 's3://$S3_BUCKET_NAME-dev'
+      - run:
+          name: Deploy on AWS
+          command: ./deploy.sh "$CIRCLE_BRANCH"
+      # - aws-s3/sync:
+      #     arguments: |
+      #       --acl public-read \
+      #       --cache-control "max-age=86400"
+      #     from: build
+      #     to: 's3://$S3_BUCKET_NAME-dev'
 
   build_prod:
     executor: my-executor
@@ -52,13 +55,16 @@ jobs:
       - attach_workspace:
           at: ~/repo
       - run: yarn build
-      - aws-s3/sync:
-          arguments: |
-            --acl public-read \
-            --cache-control "max-age=86400"
-          from: build
-          # add env variable to project settings
-          to: 's3://$S3_BUCKET_NAME-prod'
+      - run:
+          name: Deploy on AWS
+          command: ./deploy.sh "$CIRCLE_BRANCH"
+      # - aws-s3/sync:
+      #     arguments: |
+      #       --acl public-read \
+      #       --cache-control "max-age=86400"
+      #     from: build
+      #     # add env variable to project settings
+      #     to: 's3://$S3_BUCKET_NAME-prod'
 
 workflows:
   dev-build:
