--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "prettier": "^2.0.5",
     "prettier-plugin-import-sort": "^0.0.4",
     "react-scripts": "3.4.1",
+    "serverless": "^2.62.0",
+    "serverless-s3-sync": "^1.17.1",
     "typescript": "~3.9.3",
     "typesync": "^0.7.0"
   },
@@ -50,7 +52,7 @@
     "postinstall": "patch-package",
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "deploy": "yarn build && aws s3 sync ./build s3://widget-table --delete --acl public-read"
+    "deploy:resources": "sls deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
