--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,12 @@
 version: 2.1
-orbs:
-  aws-s3: circleci/aws-s3@3.0
+# orbs:
+#   aws-s3: circleci/aws-s3@3.0
 
 executors:
   my-executor:
     docker:
       - image: circleci/node:12.9.1-browsers
-      - image: 'cimg/python:3.6'
+      # - image: 'cimg/python:3.6'
     working_directory: ~/repo
 
 
