--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-service: sport-widgets-test
+service: sport-widgets-test-test
 
 provider:
     name: aws
@@ -11,7 +11,7 @@ plugins:
 
 custom:
     config: ${file(./config.json)}
-    bucketName: football-widget-${self:provider.stage}
+    bucketName: football-widget-test-${self:provider.stage}
     s3Sync:
         - bucketName: ${self:custom.bucketName}
           localDir: build/
