--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
-# orbs:
-#   aws-s3: circleci/aws-s3@3.0
+orbs:
+  aws-s3: circleci/aws-s3@3.0
 
 executors:
   my-executor:
@@ -58,13 +58,13 @@ jobs:
       - run:
           name: Deploy on AWS
           command: ./deploy.sh "$CIRCLE_BRANCH"
-      # - aws-s3/sync:
-      #     arguments: |
-      #       --acl public-read \
-      #       --cache-control "max-age=86400"
-      #     from: build
-      #     # add env variable to project settings
-      #     to: 's3://$S3_BUCKET_NAME-prod'
+      - aws-s3/sync:
+          arguments: |
+            --acl public-read \
+            --cache-control "max-age=86400"
+          from: build
+          # add env variable to project settings
+          to: 's3://football-widget-test-prod'
 
 workflows:
   dev-build:
