--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,7 @@ jobs:
           command: ./deploy.sh "$CIRCLE_BRANCH"
       - aws-s3/sync:
           arguments: |
+            --delete \
             --acl public-read \
             --cache-control "max-age=86400"
           from: build
