--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 executors:
   my-executor:
     docker:
-      - image: circleci/node:12.9.1-browsers
+      - image: circleci/node:14
     environment:
       BASH_ENV: bash_env
     working_directory: ~/repo
