--- a/serverless.yml
+++ b/serverless.yml
@@ -18,7 +18,7 @@ custom:
           acl: public-read
           localDir: build/
           params: # optional
-            - '/*':
+            - index.html:
                 CacheControl: 'no-cache'
 
 resources:
